--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "c:\\Users\\juanw\\Desktop\\Proyecto 3\\libs\\jcommon-1.0.24.jar",
-        "c:\\Users\\juanw\\Desktop\\Proyecto 3\\libs\\jfreechart-1.5.0.jar"
+        "libs\\jcommon-1.0.24.jar",
+        "libs\\jfreechart-1.5.0.jar"
     ]
 }
